--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-/* .medium-image {
-    width: 250px !important;
-    height: 250px !important;;
-} */
+.content figure {
+    margin-left: 0 !important;
+}
